docs: add documentation for delete Opening
