# handler/response.go
@@ -33,3 +33,8 @@ type CreateOpeningResponse struct {
 	Message string                  `json: "message"`
 	Data    schemas.OpeningResponse `json: "data"`
 }
+
+type DeleteOpeningResponse struct {
+	Message string                  `json: "message"`
+	Data    schemas.OpeningResponse `json: "data"`
+}
